test/error/0002-redefinition4.c
/*
PATTERN: x
PATTERN: typedef
PATTERN: c:8
*/

typedef int  x;
typedef int  x;
typedef int *x;
